istio/allow-all-namespace.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-all
  namespace: e-commerce
spec:
  rules:
  - {}  # Пустое правило разрешает весь трафик
