istio/allow-external-gateway.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-all-to-gateway
  namespace: e-commerce
spec:
  selector:
    matchLabels:
      app: api-gateway
  action: ALLOW
  rules:
  - {}  # Разрешаем весь трафик к API Gateway
