istio/authz-debug.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-all-gateway
  namespace: e-commerce
spec:
  selector:
    matchLabels:
      app: api-gateway
  action: ALLOW
  rules:
  - {}  # Allow all traffic to API Gateway
