istio/disable-authz-gateway.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: disable-authz-for-gateway
  namespace: e-commerce
spec:
  selector:
    matchLabels:
      app: api-gateway
  action: CUSTOM
  provider:
    name: "bypass-provider"
  rules:
  - {}
